--- a/Code/ensavoirplus.html
+++ b/Code/ensavoirplus.html
@@ -8,7 +8,7 @@
 <body>
         <nav class="navbar">
             <div class="navbar__container">
-                <a href="accueil.html" id="navbar__logo">Claire</a>
+                <a href="index.html" id="navbar__logo">Claire</a>
                 <div class="navbar__toggle" id="mobile-menu">
                     <span class="bar"></span>
                     <span class="bar"></span>
