--- a/Code/ensavoirplus.html
+++ b/Code/ensavoirplus.html
@@ -16,7 +16,7 @@
                 </div>
                 <ul class="navbar__menu">
                     <li class="navbar__item">
-                        <a href="accueil.html" class="navbar__links">Accueil</a>
+                        <a href="index.html" class="navbar__links">Accueil</a>
                     </li>
                     <li class="navbar__item">
                         <a href="parcours.html" class="navbar__links">Mon parcours</a>
