--- a/parcours.html
+++ b/parcours.html
@@ -39,7 +39,7 @@
         <section class="artwork-section">
             <div class="artwork-item">
                 <div class="artwork-image">
-                    <img src="/Content/parcours/metamorphosis.jpg" alt="Metamorphosis">
+                    <img src="Content/parcours/metamorphosis.jpg" alt="Metamorphosis">
                 </div>
                 <div class="artwork-details">
                     <p class="artwork-year">2025</p>
@@ -50,7 +50,7 @@
 
             <div class="artwork-item">
                 <div class="artwork-image">
-                    <img src="/Content/parcours/rem.jpg" alt="REM">
+                    <img src="Content/parcours/rem.jpg" alt="REM">
                 </div>
                 <div class="artwork-details">
                     <p class="artwork-year">2023</p>
@@ -61,7 +61,7 @@
 
             <div class="artwork-item">
                 <div class="artwork-image">
-                    <img src="/Content/parcours/watercolor_bear.jpg" alt="Watercolor Bear">
+                    <img src="Content/parcours/watercolor_bear.jpg" alt="Watercolor Bear">
                 </div>
                 <div class="artwork-details">
                     <p class="artwork-year">2022</p>
@@ -73,3 +73,4 @@
     </main>
 
 </body>
+
