--- a/inspirations.html
+++ b/inspirations.html
@@ -54,10 +54,11 @@
                         <h4 class="artist-name"><a href="https://www.brycekho.com/" target="_blank">Bryce Kho</a></h4>
                         <p class="artist-description">Illustratrice et conceptrice d'art indépendante reconnue pour ses compositions complexes et fantaisistes. J'admire profondément ses créations et j'aspire à développer une approche similaire dans mes propres travaux.</p>
                         <div class="artist-image">
-                            <img src="/Content/parcours/pika.png" alt="Bryce Kho">
+                            <img src="Content/parcours/pika.png" alt="Bryce Kho">
                         </div>
                     </div>
                 </div>
             </section>        </main>
 
     </body>
+
